# automatic-timezoned

./: .editorconfig  .envrc  .gitignore  .releaserc.yml  CHANGELOG.md  Cargo.toml  README.md  renovate.json  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
examples/: automatic-timezoned.service  geoclue.conf  polkit.rules
src/: geoclue.rs  main.rs  zoneinfo.rs
src/snapshots/: automatic_timezoned__zoneinfo__zoneinfo.snap
tests/: cli_tests.rs
tests/cmd/: help.md  version.md
