[package]
name = "automatic-timezoned"
description = "Automatically update system timezone based on location"
version = "2.0.118"
edition = "2021"
repository = "https://github.com/maxbrunet/automatic-timezoned"
license = "GPL-3.0"
keywords = ["dbus", "geoclue", "systemd", "timezone", "zoneinfo"]

[dependencies]
env_logger = { version = "=0.11.9", default-features = false }
log = { version = "=0.4.29", default-features = false }
tzf-rs = { version = "=1.1.4", default-features = false }
zvariant = { version = "=5.9.2", default-features = false }

[dependencies.clap]
version = "=4.5.59"
default-features = false
features = [
  "derive",
  "env",
  "error-context",
  "help",
  "std",
  "usage",
]

[dependencies.zbus]
version = "=5.13.2"
default-features = false
features = [
  "async-io",
  "blocking-api",
]

[dev-dependencies]
trycmd = "=1.0.0"

[profile.release]
lto = true
codegen-units = 1
