[package]
name = "automatic-timezoned"
description = "Automatically update system timezone based on location"
version = "2.0.124"
edition = "2021"
repository = "https://github.com/maxbrunet/automatic-timezoned"
license = "GPL-3.0"
keywords = ["dbus", "geoclue", "systemd", "timezone", "zoneinfo"]

[dependencies]
anyhow = { version = "=1.0.102", default-features = false }
env_logger = { version = "=0.11.9", default-features = false }
log = { version = "=0.4.29", default-features = false }
tzf-rs = { version = "=1.1.5", default-features = false }
zvariant = { version = "=5.10.0", default-features = false }
futures-lite = { version = "=2.6.1", default-features = false }

[dependencies.tokio]
version = "=1.50.0"
default-features = false
features = [
  "full"
]

[dependencies.clap]
version = "=4.6.0"
default-features = false
features = [
  "derive",
  "env",
  "error-context",
  "help",
  "std",
  "usage",
]

[dependencies.zbus]
version = "=5.14.0"
default-features = false
features = [
  "tokio"
]

[dev-dependencies]
trycmd = "=1.1.1"

[profile.release]
lto = true
codegen-units = 1
