[package]
name = "automatic-timezoned"
description = "Automatically update system timezone based on location"
version = "2.0.142"
edition = "2021"
repository = "https://github.com/maxbrunet/automatic-timezoned"
license = "GPL-3.0"
keywords = ["dbus", "geoclue", "systemd", "timezone", "zoneinfo"]

[dependencies]
env_logger = { version = "=0.11.11", default-features = false }
log = { version = "=0.4.33", default-features = false }
tzf-rs = { version = "=1.3.3", default-features = false, features = ["bundled"] }
zvariant = { version = "=5.13.0", default-features = false }

[dependencies.clap]
version = "=4.6.1"
default-features = false
features = [
  "derive",
  "env",
  "error-context",
  "help",
  "std",
  "usage",
]

[dependencies.zbus]
version = "=5.17.0"
default-features = false
features = [
  "async-io",
  "blocking-api",
]

[dev-dependencies]
trycmd = "=1.2.0"

[profile.release]
lto = true
codegen-units = 1
